--- a/The Collector.vbproj
+++ b/The Collector.vbproj
@@ -76,6 +76,12 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateStudent.Designer.vb">
+      <DependentUpon>CreateStudent.vb</DependentUpon>
+    </Compile>
+    <Compile Include="CreateStudent.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Identity.vb" />
     <Compile Include="UserInfoForm.Designer.vb">
       <DependentUpon>UserInfoForm.vb</DependentUpon>
