Implimented creating a student for teachers

--- a/The Collector.vbproj
+++ b/The Collector.vbproj
@@ -125,6 +125,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="CreateStudent.resx">
+      <DependentUpon>CreateStudent.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.vb</DependentUpon>
     </EmbeddedResource>
