started implimenting the assign student to class functionality

--- a/The Collector.vbproj
+++ b/The Collector.vbproj
@@ -94,6 +94,12 @@
     <Compile Include="CreateStudent.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form1.Designer.vb">
+      <DependentUpon>Form1.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form1.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Identity.vb" />
     <Compile Include="UserInfoForm.Designer.vb">
       <DependentUpon>UserInfoForm.vb</DependentUpon>
@@ -145,6 +151,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CreateStudent.resx">
       <DependentUpon>CreateStudent.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.vb</DependentUpon>
