--- a/The Collector.vbproj
+++ b/The Collector.vbproj
@@ -109,6 +109,12 @@
     <Compile Include="CreateClassForm.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="CreateQuestionForm.Designer.vb">
+      <DependentUpon>CreateQuestionForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="CreateQuestionForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="CreateStudent.Designer.vb">
       <DependentUpon>CreateStudent.vb</DependentUpon>
     </Compile>
@@ -176,6 +182,9 @@
     <EmbeddedResource Include="CreateClassForm.resx">
       <DependentUpon>CreateClassForm.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CreateQuestionForm.resx">
+      <DependentUpon>CreateQuestionForm.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CreateStudent.resx">
       <DependentUpon>CreateStudent.vb</DependentUpon>
     </EmbeddedResource>
@@ -217,6 +226,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <None Include="bg.jpg" />
     <Content Include="Icon1.ico" />
   </ItemGroup>
   <ItemGroup>
