--- a/The Collector.vbproj
+++ b/The Collector.vbproj
@@ -110,6 +110,12 @@
     <Compile Include="AssignQuestion.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="CheckGrades.Designer.vb">
+      <DependentUpon>CheckGrades.vb</DependentUpon>
+    </Compile>
+    <Compile Include="CheckGrades.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="TrueOrFalseForm.Designer.vb">
       <DependentUpon>TrueOrFalseForm.vb</DependentUpon>
     </Compile>
@@ -236,6 +242,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AssignQuestion.resx">
       <DependentUpon>AssignQuestion.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CheckGrades.resx">
+      <DependentUpon>CheckGrades.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TrueOrFalseForm.resx">
       <DependentUpon>TrueOrFalseForm.vb</DependentUpon>
